plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

base {
    archivesName = mod_id
}

sourceSets.main.resources { setSrcDirs(['src/main/resources', 'src/generated/resources']) }

repositories {
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fileTree(dir: 'libs', include: '*.jar', excludes: ['spark-*.jar'])
    compileOnly fileTree(dir: 'libs', include: 'spark-*.jar')
    implementation files('D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL九周目/.minecraft/versions/GTL九周目/mods/ftb-quests-forge-2001.4.8.jar')
    implementation files('D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL九周目/.minecraft/versions/GTL九周目/mods/ftb-teams-forge-2001.3.2.jar')
    // cloth-config：模组列表「配置」按钮的 GUI（运行期整合包已提供，仅编译期引用）
    compileOnly files('D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL九周目/.minecraft/versions/GTL九周目/mods/cloth-config-11.1.136-forge.jar')


    implementation 'io.github.llamalad7:mixinextras-common:0.5.0-beta.2'
    annotationProcessor 'io.github.llamalad7:mixinextras-common:0.5.0-beta.2'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:-processing', '-Xlint:-deprecation', '-Xlint:-removal']
}

minecraft {
    mappings channel: mappings_channel, version: "${mappings_version}-${minecraft_version}"

    runs {
        client {
            workingDirectory file('run')
            property 'forge.logging.console.level', 'debug'
            mods { gt_shanhai { source sourceSets.main } }
        }
        server {
            workingDirectory file('run')
            property 'forge.logging.console.level', 'debug'
            mods { gt_shanhai { source sourceSets.main } }
        }
    }
}

processResources {
    filteringCharset = 'UTF-8'
    var replaceProperties = [
            mod_id: mod_id, mod_name: mod_name, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
            minecraft_version: minecraft_version, forge_version: forge_version,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties
        filteringCharset = 'UTF-8'
    }
    filesMatching(['pack.mcmeta']) { filteringCharset = 'UTF-8' }
}

jar {
    manifest {
        attributes([
                'Specification-Title'     : mod_name,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : mod_name,
                'Implementation-Version'  : mod_version,
                'Implementation-Vendor'   : mod_authors,
                'MixinConfigs'            : 'gt_shanhai.mixin.json',
        ])
    }
}

// .rtui 配方 UI 克隆
task cloneRtui(type: JavaExec) {
    group = 'gt_shanhai'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.dishanhai.gt_shanhai.util.RtuiCloner'
    args = [
        'D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL八周目2号/.minecraft/versions/GTL八周目2/mods/gtlcore-1.2.2.9-fix3..jar',
        'gtceu:black_hole_event_horizon_blast',
        'C:/Users/dishanhai/Desktop/gt_shanhai/src/main/resources/assets/gtceu/ui/recipe_type/black_hole_event_horizon_blast.rtui'
    ]
}

// Schematic → .mb 转换任务
task convertSchematic(type: JavaExec) {
    group = 'gt_shanhai'
    description = 'Convert WorldEdit .schem to FactoryBlockPattern .mb format'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.dishanhai.gt_shanhai.util.SchematicToMbConverter'
    args = [
        'D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL八周目2号/.minecraft/versions/GTL八周目2/config/worldedit/schematics/heidon.schem',
        'C:/Users/dishanhai/Desktop/gt_shanhai/black_hole_converted.mb'
    ]
}

task convertTianjieSchematic(type: JavaExec) {
    group = 'gt_shanhai'
    description = 'Convert Tianjie Navigation Tower schematic to cropped .mb resource'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.dishanhai.gt_shanhai.util.SchematicToMbResourceConverter'
    args = [
        'D:/minecraft/gtl/.minecraft/versions/八周目/.minecraft/versions/GTL八周目2号/.minecraft/versions/GTL八周目2/config/worldedit/schematics/tianjie2.schem',
        'C:/Users/dishanhai/Desktop/gt_shanhai/src/main/resources/assets/gt_shanhai/multiblock/tianjie_navigation_tower.mb',
        'C:/Users/dishanhai/Desktop/gt_shanhai/src/main/resources/assets/gt_shanhai/multiblock/tianjie_navigation_tower_report.txt'
    ]
}
